--- a/src/sass/blocks/_nav.scss
+++ b/src/sass/blocks/_nav.scss
@@ -14,6 +14,19 @@
   transform: translate(-50%);
   z-index: 1;
 
+  .ship {
+    width: 5rem;
+    height: 5rem;
+    position: absolute;
+    top: .25rem;
+    left: 0;
+    background-image:url('https://i.imgur.com/xxjbkIV.gif');
+    background-repeat:no-repeat;
+    background-size:contain;
+    background-position:center;
+    transform: scale(.75,.75)rotate(90deg);
+  }
+  
   @media (--tablet) {
     padding: 1.75rem 1.25rem 1.25rem;
   }
@@ -29,6 +42,7 @@
   &__title {
     @extend %txt--banner;
     color: cc(txt, alt);
+    padding-left: 4rem;
   }
 
   &__menu {
